--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <svg id="wave" class="w-100 d-none d-md-block" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 130" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(232, 240, 241, 1)" offset="0%"></stop><stop stop-color="rgba(213, 232, 234, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,39L34.3,45.5C68.6,52,137,65,206,75.8C274.3,87,343,95,411,97.5C480,100,549,95,617,88.8C685.7,82,754,74,823,60.7C891.4,48,960,30,1029,26C1097.1,22,1166,30,1234,41.2C1302.9,52,1371,65,1440,69.3C1508.6,74,1577,69,1646,67.2C1714.3,65,1783,65,1851,60.7C1920,56,1989,48,2057,52C2125.7,56,2194,74,2263,84.5C2331.4,95,2400,100,2469,99.7C2537.1,100,2606,95,2674,97.5C2742.9,100,2811,108,2880,93.2C2948.6,78,3017,39,3086,23.8C3154.3,9,3223,17,3291,32.5C3360,48,3429,69,3497,80.2C3565.7,91,3634,91,3703,78C3771.4,65,3840,39,3909,23.8C3977.1,9,4046,4,4114,17.3C4182.9,30,4251,61,4320,65C4388.6,69,4457,48,4526,39C4594.3,30,4663,35,4731,34.7C4800,35,4869,30,4903,28.2L4937.1,26L4937.1,130L4902.9,130C4868.6,130,4800,130,4731,130C4662.9,130,4594,130,4526,130C4457.1,130,4389,130,4320,130C4251.4,130,4183,130,4114,130C4045.7,130,3977,130,3909,130C3840,130,3771,130,3703,130C3634.3,130,3566,130,3497,130C3428.6,130,3360,130,3291,130C3222.9,130,3154,130,3086,130C3017.1,130,2949,130,2880,130C2811.4,130,2743,130,2674,130C2605.7,130,2537,130,2469,130C2400,130,2331,130,2263,130C2194.3,130,2126,130,2057,130C1988.6,130,1920,130,1851,130C1782.9,130,1714,130,1646,130C1577.1,130,1509,130,1440,130C1371.4,130,1303,130,1234,130C1165.7,130,1097,130,1029,130C960,130,891,130,823,130C754.3,130,686,130,617,130C548.6,130,480,130,411,130C342.9,130,274,130,206,130C137.1,130,69,130,34,130L0,130Z"></path></svg>
     <div class="container my-5 mb-md-1 mt-md-4 reveal">
       <div class="row m-0">
-        <div class="col-12 py-5 px-md-5 py-md-0 row mt-1 text-center text-md-left">
+        <div class="col-12 py-5 px-md-5 py-md-3 row mt-1 text-center text-md-left">
           <h2 class="col-12 mb-4">Why Choose Us?</h2>
           <div class="col-12 col-md-6 mb-2 mt-3 mt-3">
             <h4><strong><i class="fas fa-sack-dollar"></i> Affordable</strong></h4>
@@ -282,7 +282,7 @@
 
 <section class="alreadydiv reveal">
   <svg id="wave" class="w-100 d-none d-md-block" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 130" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(213, 232, 234, 1)" offset="0%"></stop><stop stop-color="rgba(232, 240, 241, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,91L80,78C160,65,320,39,480,41.2C640,43,800,74,960,78C1120,82,1280,61,1440,58.5C1600,56,1760,74,1920,86.7C2080,100,2240,108,2400,106.2C2560,104,2720,91,2880,73.7C3040,56,3200,35,3360,32.5C3520,30,3680,48,3840,49.8C4000,52,4160,39,4320,41.2C4480,43,4640,61,4800,73.7C4960,87,5120,95,5280,84.5C5440,74,5600,43,5760,30.3C5920,17,6080,22,6240,32.5C6400,43,6560,61,6720,71.5C6880,82,7040,87,7200,78C7360,69,7520,48,7680,43.3C7840,39,8000,52,8160,58.5C8320,65,8480,65,8640,54.2C8800,43,8960,22,9120,10.8C9280,0,9440,0,9600,8.7C9760,17,9920,35,10080,47.7C10240,61,10400,69,10560,75.8C10720,82,10880,87,11040,84.5C11200,82,11360,74,11440,69.3L11520,65L11520,130L11440,130C11360,130,11200,130,11040,130C10880,130,10720,130,10560,130C10400,130,10240,130,10080,130C9920,130,9760,130,9600,130C9440,130,9280,130,9120,130C8960,130,8800,130,8640,130C8480,130,8320,130,8160,130C8000,130,7840,130,7680,130C7520,130,7360,130,7200,130C7040,130,6880,130,6720,130C6560,130,6400,130,6240,130C6080,130,5920,130,5760,130C5600,130,5440,130,5280,130C5120,130,4960,130,4800,130C4640,130,4480,130,4320,130C4160,130,4000,130,3840,130C3680,130,3520,130,3360,130C3200,130,3040,130,2880,130C2720,130,2560,130,2400,130C2240,130,2080,130,1920,130C1760,130,1600,130,1440,130C1280,130,1120,130,960,130C800,130,640,130,480,130C320,130,160,130,80,130L0,130Z"></path></svg>
-  <div class="container">
+  <div class="container pt-0 pt-md-5">
     <div class="row m-0">
       <div class="col-12 p-0 py-5 py-md-2 pb-md-5 row mt-1 text-center">
         <h2 class="col-12 mb-4">Already have a website?</h2>
@@ -310,23 +310,30 @@
 <footer>
   <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 210" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(52, 153, 164, 1)" offset="0%"></stop><stop stop-color="rgba(52, 153, 164, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,126L80,108.5C160,91,320,56,480,66.5C640,77,800,133,960,129.5C1120,126,1280,63,1440,63C1600,63,1760,126,1920,133C2080,140,2240,91,2400,59.5C2560,28,2720,14,2880,31.5C3040,49,3200,98,3360,105C3520,112,3680,77,3840,84C4000,91,4160,140,4320,150.5C4480,161,4640,133,4800,108.5C4960,84,5120,63,5280,66.5C5440,70,5600,98,5760,91C5920,84,6080,42,6240,35C6400,28,6560,56,6720,56C6880,56,7040,28,7200,14C7360,0,7520,0,7680,7C7840,14,8000,28,8160,28C8320,28,8480,14,8640,7C8800,0,8960,0,9120,0C9280,0,9440,0,9600,17.5C9760,35,9920,70,10080,91C10240,112,10400,119,10560,133C10720,147,10880,168,11040,154C11200,140,11360,91,11440,66.5L11520,42L11520,210L11440,210C11360,210,11200,210,11040,210C10880,210,10720,210,10560,210C10400,210,10240,210,10080,210C9920,210,9760,210,9600,210C9440,210,9280,210,9120,210C8960,210,8800,210,8640,210C8480,210,8320,210,8160,210C8000,210,7840,210,7680,210C7520,210,7360,210,7200,210C7040,210,6880,210,6720,210C6560,210,6400,210,6240,210C6080,210,5920,210,5760,210C5600,210,5440,210,5280,210C5120,210,4960,210,4800,210C4640,210,4480,210,4320,210C4160,210,4000,210,3840,210C3680,210,3520,210,3360,210C3200,210,3040,210,2880,210C2720,210,2560,210,2400,210C2240,210,2080,210,1920,210C1760,210,1600,210,1440,210C1280,210,1120,210,960,210C800,210,640,210,480,210C320,210,160,210,80,210L0,210Z"></path></svg>
   <div class="container">
-    <div class="row">
-      <div class="col-4 d-flex flex-column align-items-center text-center">
+    <div class="row pb-4 d-flex justify-content-center">
+      <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center">
         <img class="w-100" src="resources/images/FullLogoWhite.png" alt="">
-        <h6>Newcastle Based Web Developer</h6>
+        <h6 class="ml-3">Newcastle Based Web Developer</h6>
       </div>
-      <div class="col-8 row mt-5">
-        <div class="col-4">
+      <div class="col-12 col-md-8 row mt-5">
+        <div class="col-0 col-md-3 d-flex align-items-center flex-column text-center">
 
         </div>
-        <div class="col-4 d-flex align-items-center flex-column text-center">
+        <div class="col-6 col-md-3 d-flex align-items-center flex-column text-center">
           <i class="fas fa-map-marker-alt"></i><br>
+          <p class="mb-0">We are based in</p class="mb-0">
           <h6>Newcastle Upon Tyne</h6>
         </div>
-        <div class="col-4 d-flex align-items-center flex-column text-center">
+        <a href="mailto:sam@tech-gecko.com" class="col-6 col-md-3 d-flex align-items-center flex-column text-center">
+          <i class="fas fa-envelope"></i><br>
+          <p class="mb-0">Get in contact:</p class="mb-0">
+          <h6>sam@tech-gecko.com</h6>
+        </a>
+        <a href="tel:079857901808" class="col-6 col-md-3 d-flex align-items-center flex-column text-center m-auto m-md-0 pt-4 pt-md-0">
           <i class="fas fa-phone"></i><br>
+          <p class="mb-0">Call now:</p>
           <h6>07985791808</h6>
-        </div>
+        </a>
       </div>
     </div>
   </div>
