--- a/resources/packages.html
+++ b/resources/packages.html
@@ -120,7 +120,7 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Max 10 Pages</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Custom Modern Design</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> 2 Amends Monthly</p>
-        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks great On All Devices</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks Great On All Devices</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Favicon Design</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> MailChimp Contact Form</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> One Month Average Completion</p>
@@ -171,12 +171,12 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Max 25 Pages</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Custom Modern Design</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> 5 Amends Monthly</p>
-        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks great On All Devices</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks Great On All Devices</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Favicon Design</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> MailChimp Contact Form</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Two Months Average Completion</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Logo Design</p>
-        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> 10% Discount On Next Order</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Social Media Integration</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> £25 Upkeep</p>
       </div>
       <a href="/resources/contact" class="m-auto">
@@ -225,12 +225,12 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Unlimited Pages</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Bespoke Custom Design</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Unlimited Amends</p>
-        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks great On All Devices</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks Great On All Devices</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Favicon Design</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> MailChimp Contact Form</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Three Months Average Completion</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Logo Design</p>
-        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> 15% Discount On Next Order</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Social Media Integration</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> <span class="textcolor">*</span>£30 Upkeep</p>
       </div>
       <a href="/resources/contact" class="m-auto">
