--- a/resources/aboutus.html
+++ b/resources/aboutus.html
@@ -111,7 +111,7 @@
     <div class="container">
     <div class="row pb-4 d-flex justify-content-center">
       <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center">
-        <img class="w-100" src="images/FullLogoWhite.png" alt="">
+        <img class="w-100 mt-4 mt-md-0" src="images/FullLogoWhite.png" alt="">
         <h6 class="ml-3">Newcastle Based Web Developer</h6>
       </div>
       <div class="col-12 col-md-8 row mt-5">
