--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
         <h2 class="col-12 mb-4">Already have a website?</h2>
         <div class="col-12">
           <h4 class="mb-4">We can help optimise, streamline or rebuild for you</h4>
+          <!-- <a href="/resources/contact" class="m-auto d-flex align-items-center btn-primary">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a> -->
           <a href="/resources/contact">
             <button class="blob-btn m-auto d-flex align-items-center">
               GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i>
@@ -312,7 +313,7 @@
   <div class="container">
     <div class="row pb-4 d-flex justify-content-center">
       <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center">
-        <img class="w-100" src="resources/images/FullLogoWhite.png" alt="">
+        <img class="w-100 mt-4 mt-md-0" src="resources/images/FullLogoWhite.png" alt="">
         <h6 class="ml-3">Newcastle Based Web Developer</h6>
       </div>
       <div class="col-12 col-md-8 row mt-5">
