--- a/resources/packages.html
+++ b/resources/packages.html
@@ -101,7 +101,7 @@
         <div class="d-flex flex-column mb-4 text-center text-md-left">
           <h2 class="mr-3">£500</h2><h5><em>or £100 a month, over 6 months</em></h5>
         </div>  
-          <p class="pr-md-5 pr-0">Our standard package is our most popular. We offer an easy to navigate, modern and simplified design.<br><br>This package is perfect for your cafes, barbers or your own personal handyman business.</p>
+          <p class="pr-md-5 pr-0">Our standard package is our most popular. We offer an easy to navigate, modern and simplified design.<br><br>This package would be perfect for your cafes, barbers or your own personal handyman business.</p>
           <a href="/resources/contact">
             <button class="blob-btn d-none d-md-block">
               GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i>
@@ -152,7 +152,7 @@
         <div class="d-flex flex-column mb-4 text-center text-md-left">
           <h2 class="mr-3">£750</h2><h5><em>or £150 a month, over 6 months</em></h5>
         </div>  
-          <p class="pr-md-5 pr-0">Our standard package is our most popular. We offer an easy to navigate, modern and simplified design.<br><br>This package is perfect for your cafes, barbers or your own personal handyman business.</p>
+          <p class="pr-md-5 pr-0">Our premium package is ideal for those who need a bigger site with more amendments.<br><br>This package would be perfect for shops, B&Bs, vehicle repair, wherever you need multiple pages that need updated more regularly.  </p>
           <a href="/resources/contact">
             <button class="blob-btn d-none d-md-block">
               GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i>
@@ -206,7 +206,7 @@
           <h2 class="mr-3"><span class="textcolor">*</span>£1000</h2><h5><em>or <span class="textcolor">*</span>£200 a month, over 6 months</em></h5>
           <p class="smalltext textcolor">* depending on website</p>
         </div>  
-          <p class="pr-md-5 pr-0">Our standard package is our most popular. We offer an easy to navigate, modern and simplified design.<br><br>This package is perfect for your cafes, barbers or your own personal handyman business.</p>
+          <p class="pr-md-5 pr-0">Our bespoke package is for anything above and beyond the previous packages.<br><br>This package is ideal for much larger and unique sites, which require more complexity and specialised styling.</p>
           <a href="/resources/contact">
             <button class="blob-btn d-none d-md-block">
               GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i>
