--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             <h2 class="mb-4">We are a small <span class="textcolor">website developing</span> company based in Newcastle Upon Tyne, focused on <span class="textcolor">affordable</span>, <span class="textcolor">responsive</span> and <span class="textcolor">modern</span> websites that look great on all devices.</h2>
           </div>
           <div class="w-100 d-flex justify-content-center">
-            <a href="/resources/aboutus">
+            <a href="/resources/aboutus" class="btn-primary d-flex align-items-center d-md-none ">READ MORE <i class="fas fa-chevron-right ml-2"></i></a>
+            <a href="/resources/aboutus" class="d-none d-md-block">
               <button class="blob-btn m-auto d-flex align-items-center">
               READ MORE <i class="fas fa-chevron-right ml-2"></i>
               <span class="blob-btn__inner">
@@ -180,7 +181,8 @@
           </div>
         </div>
         <div>
-          <a href="/resources/packages">
+          <a href="/resources/packages" class="btn-primary d-flex align-items-center d-md-none ">EXPLORE <i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/packages" class="d-none d-md-block">
             <button class="blob-btn m-auto d-flex align-items-center">
               EXPLORE<i class="fas fa-chevron-right ml-2"></i>
               <span class="blob-btn__inner">
@@ -220,7 +222,8 @@
           </div>
         </div>
         <div>
-          <a href="/resources/packages">
+          <a href="/resources/packages" class="btn-primary d-flex align-items-center d-md-none ">EXPLORE <i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/packages" class="d-none d-md-block">
             <button class="blob-btn m-auto d-flex align-items-center">
               EXPLORE<i class="fas fa-chevron-right ml-2"></i>
               <span class="blob-btn__inner">
@@ -261,7 +264,8 @@
           </div>
         </div>
         <div>
-          <a href="/resources/packages">
+          <a href="/resources/packages" class="btn-primary d-flex align-items-center d-md-none ">EXPLORE <i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/packages" class="d-none d-md-block">
             <button class="blob-btn m-auto d-flex align-items-center">
               EXPLORE<i class="fas fa-chevron-right ml-2"></i>
               <span class="blob-btn__inner">
@@ -289,7 +293,8 @@
         <div class="col-12">
           <h4 class="mb-4">We can help optimise, streamline or rebuild for you</h4>
           <!-- <a href="/resources/contact" class="m-auto d-flex align-items-center btn-primary">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a> -->
-          <a href="/resources/contact">
+          <a href="/resources/contact" class="btn-primary d-md-none ">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/contact" class=" d-none d-md-block">
             <button class="blob-btn m-auto d-flex align-items-center">
               GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i>
               <span class="blob-btn__inner">
