--- a/resources/aboutus.html
+++ b/resources/aboutus.html
@@ -83,7 +83,8 @@
                     We aim to help the smaller, independant businesses - your barbers, cafes, tattoo artists, we want to help you get your business out there and gather more customers.<br><br>
                     We know what works, and what people want to see. They want modern, easy to navigate, less cluttered sites. This is what we specialise in.<br><br>
                     Contact us now, and we can have a chat about how we can help you with your business.</p><br>
-                <a href="/resources/contact">
+                    <a href="/resources/contact" class="btn-primary d-md-none ">GET IN TOUCH <i class="fas fa-chevron-right ml-2"></i></a>
+                    <a href="/resources/contact" class="d-none d-md-block">
                   <button class="blob-btn d-none d-md-block">
                     GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i>
                     <span class="blob-btn__inner">
