--- a/resources/contact.html
+++ b/resources/contact.html
@@ -110,7 +110,8 @@
                         <div class="form-group">
                           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Describe your business"></textarea>
                         </div>
-                        <button class="blob-btn d-flex align-items-center">
+                        <button href="/resources/packages" class="btn-primary d-flex m-auto align-items-center d-md-none ">SUBMIT <i class="fas fa-chevron-right ml-2"></i></button>
+                        <button class="blob-btn d-none d-md-flex align-items-center">
                           SUBMIT<i class="fas fa-chevron-right ml-2"></i>
                           <span class="blob-btn__inner">
                             <span class="blob-btn__blobs">
