--- a/resources/packages.html
+++ b/resources/packages.html
@@ -126,19 +126,7 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> One Month Average Completion</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> £20 Upkeep</p>
       </div>
-      <a href="/resources/contact" class="m-auto">
-        <button class="blob-btn d-block d-md-none mt-4">
-          GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i>
-          <span class="blob-btn__inner">
-            <span class="blob-btn__blobs">
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-            </span>
-          </span>
-        </button>
-      </a>
+      <a href="/resources/contact" class="btn-primary d-flex align-items-center d-md-none mx-auto mt-3">GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i></a>
     </div>
   </div>
 </section>
@@ -179,19 +167,7 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Social Media Integration</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> £25 Upkeep</p>
       </div>
-      <a href="/resources/contact" class="m-auto">
-        <button class="blob-btn d-block d-md-none mt-4">
-          GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i>
-          <span class="blob-btn__inner">
-            <span class="blob-btn__blobs">
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-            </span>
-          </span>
-        </button>
-      </a>
+      <a href="/resources/contact" class="btn-primary d-flex align-items-center d-md-none mx-auto mt-3">GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i></a>
     </div>
   </div>
 </section>
@@ -233,19 +209,7 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Social Media Integration</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> <span class="textcolor">*</span>£30 Upkeep</p>
       </div>
-      <a href="/resources/contact" class="m-auto">
-        <button class="blob-btn d-block d-md-none mt-4">
-          GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i>
-          <span class="blob-btn__inner">
-            <span class="blob-btn__blobs">
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-            </span>
-          </span>
-        </button>
-      </a>
+      <a href="/resources/contact" class="btn-primary d-md-none mx-auto mt-3">GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i></a>
     </div>
   </div>
 </section>
@@ -258,7 +222,8 @@
         <h2 class="col-12 mb-4">Already have a website?</h2>
         <div class="col-12">
           <h4 class="mb-4">We can help optimise, streamline or rebuild for you</h4>
-          <a href="/resources/contact">
+          <a href="/resources/contact" class="btn-primary d-flex align-items-center d-md-none ">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/contact" class=" d-none d-md-block">
             <button class="blob-btn m-auto d-flex align-items-center">
               GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i>
               <span class="blob-btn__inner">
