--- a/resources/packages.html
+++ b/resources/packages.html
@@ -44,7 +44,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container">
-      <a class="navbar-brand ml-3" href="/"><img class="navlogo" src="images/FullLogo.png" alt="TechGeckoFullLogo"></a>
+      <a class="navbar-brand ml-2 d-block d-md-none" href="#"><img class="navlogosml" src="images/Logo.png" alt="TechGeckoLogo"></a>
+      <a class="navbar-brand ml-md-3 d-none d-md-block" href="#"><img class="navlogo" src="images/FullLogo.png" alt="TechGeckoFullLogo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
