--- a/resources/packages.html
+++ b/resources/packages.html
@@ -223,7 +223,7 @@
         <h2 class="col-12 mb-4">Already have a website?</h2>
         <div class="col-12">
           <h4 class="mb-4">We can help optimise, streamline or rebuild for you</h4>
-          <a href="/resources/contact" class="btn-primary d-flex align-items-center d-md-none ">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/contact" class="btn-primary d-md-none ">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a>
           <a href="/resources/contact" class=" d-none d-md-block">
             <button class="blob-btn m-auto d-flex align-items-center">
               GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i>
