--- a/resources/aboutus.html
+++ b/resources/aboutus.html
@@ -112,8 +112,8 @@
     <div class="container">
     <div class="row pb-4 d-flex justify-content-center">
       <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center">
-        <img class="w-100 mt-4 mt-md-0" src="images/FullLogoWhite.png" alt="">
-        <h6 class="ml-3">Newcastle Based Web Developer</h6>
+        <img class="w-100 mt-5 mt-md-0" src="images/FullLogoWhite.png" alt="">
+        <h6 class="ml-3" style="font-weight: 500;">Newcastle Based Web Developer</h6>
       </div>
       <div class="col-12 col-md-8 row mt-5">
         <div class="col-0 col-md-3 d-flex align-items-center flex-column text-center">
